[tool.poetry]
name = "stupid-havk"
version = "0.1.0"
description = ""
authors = ["PogusTheWhisper <gusjangkid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.24.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
